<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:id="@+id/layout_pricing">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Название"
            android:textSize="12sp" />


    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="5dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="2"
           android:text="@string/materials"
           android:textSize="12sp" />

       <EditText
           android:id="@+id/edit_text_quantity"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:hint="@string/quantity"
           android:inputType="numberDecimal"
           android:textSize="12sp" />

       <EditText
           android:id="@+id/edit_text_material_price"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:hint="@string/price"
           android:inputType="numberDecimal"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_view_materials_total"
           android:layout_width="80dp"
           android:layout_height="wrap_content"
           android:textSize="12sp" />

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Время"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_text_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Часов"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_text__time_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/price_hour"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_view_time_total"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/number_of_pieces"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_text_number_of_pieces"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/extra_charge"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_text_extra_charge"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="%"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/delivery_one_piece"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edit_text_delivery"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="right">

        <Button
            android:id="@+id/button_pricing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricing_one_piece"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/text_view_total_price_of_one"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/clear"
            android:textSize="10sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onExchangeOnePiece"
            android:text="@string/exchange"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:id="@+id/layout_list_view">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSendData"
            android:text="@string/send_pricing"
            android:textSize="10sp" />

    </LinearLayout>


</LinearLayout>
